--- a/src/style.css
+++ b/src/style.css
@@ -135,6 +135,19 @@ section{
     padding: 100px 0;
 }
 
+.about, .services, .skills{
+    font-family: 'Poppins', sans-serif;
+}
+
+.about .about-content,
+.services .serv-content, 
+.skills, .skills-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
 section .title{
     position: relative;
     text-align: center;
@@ -168,9 +181,6 @@ section .title::after{
 }
 
 /*about section styling -->*/
-.about, .services{
-    font-family: 'Poppins', sans-serif;
-}
 
 section .title{
     position: relative;
@@ -208,13 +218,6 @@ section .title::after{
     content: "who i am";
 }
 
-.about .about-content,
-.services .serv-content{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
 
 .about .about-content .left{
     width: 45%;
@@ -322,6 +325,92 @@ section .title::after{
 }
 
 
+/* Skills section styling */
+
+.skills .title::after{
+    content: "what i know";
+}
+
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
+
+.skills .skills-content .left .text{
+    font-size: 23px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .left p{
+    text-align: justify;
+}
+
+.skills .skills-content .left a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.skills .skills-content .left a:hover{
+    color: crimson;
+    background: none;
+}
+
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+
+.skills .skills-content .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: crimson;
+}
+
+.skills .skills-content .right .frontend::before{
+    width: 50%;
+}
+
+.skills .skills-content .right .backend::before{
+    width: 80%;
+}
+.skills .skills-content .right .linux::before{
+    width: 70%;
+}
+.skills .skills-content .right .ad::before{
+    width: 65%;
+}
+.skills .skills-content .right .sql::before{
+    width: 70%;
+}
 
 
 
@@ -413,6 +502,11 @@ section .title::after{
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
+    .skills .skills-content .column{
+        width: 100%;
+        margin-bottom: 35px;
+    }
+
     
 }
 
@@ -432,7 +526,8 @@ section .title::after{
     .home .home-content a{
         font-size: 20px;
     }
-    .services .serv-content .card{
+    .services .serv-content .card,
+    .skills .skills-content .column{
         width: 100%;
     }
 }
